# B.R.I.O.S.

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  README.md  croassant_scanner.py  main.py  main_new.py  main_old.py  makefile  pyproject.toml  requirements-ci.txt  requirements.txt  test_args.py  test_ble_monitor.py
.github/: README.md  README_OLD.md  README_old.md
.github/workflows/: 01-style-check.yml  02-unit-tests.yml  03-type-check.yml  04-security-audit.yml  05-release.yml  06-deploy-docs.yml  ci 2.yml  ci-python-3.12.yml  ci.yml  style-check.yml  test.yml
Formula/: brios.rb
brios/: __init__.py  __main__.py  cli.py
brios/core/: config.py  logger.py  monitor.py  scanner.py  service.py  system.py  updater.py  utils.py
docs/: API.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  TESTING.md
requirements/: base.txt  ci.txt  dev.txt
src/: main.py  parser.py  scanner.py
src/calculations/: distance_estimation.py
src/class/: device.py
src/log/: logging.py
src/settings/: devices.py.example
tests/: conftest.py  test_ble_monitor.py  test_cli_stop.py  test_heartbeat.py  test_monitor.py  test_retry.py  test_timeout.py  test_updater.py  test_utils_system.py  test_watchdog.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: changelog.md  code-of-conduct.md  faq.md  intro.md
website/docs/api/: architecture.md  core-modules.md
website/docs/development/: contributing.md  testing.md
website/docs/getting-started/: installation.md  quick-start.md
website/docs/guide/: background-service.md  cli-usage.md  configuration.md
website/scripts/: sync-changelog.js
website/src/pages/: index.module.css  index.tsx
