[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brios"
dynamic = ["version"]
description = "Bluetooth Reactive Intelligent Operator for Croissant Safety"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Piero24", email = "your.email@example.com"}
]
dependencies = [
    "bleak==0.21.1",
    "python-dotenv==1.0.0", 
    "pyobjc-framework-Quartz==9.2; sys_platform == 'darwin'" 
]

[project.scripts]
brios = "brios.cli:main"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["brios*"]

[tool.pyink]
line-length = 80
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
exclude = ["build/", "env/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
